--- a/Mon_PK_et_moi/Base.lproj/Main.storyboard
+++ b/Mon_PK_et_moi/Base.lproj/Main.storyboard
@@ -773,7 +773,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="pressbutton:" destination="lvT-XV-GgS" eventType="touchUpInside" id="vTb-qj-iwZ"/>
+                                    <action selector="validerPress:" destination="TZR-XE-tx2" eventType="touchUpInside" id="C5d-Lt-HDG"/>
                                 </connections>
                             </button>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="15" translatesAutoresizingMaskIntoConstraints="NO" id="RYM-6W-S9g">
